Fix spelling of "transparent" in settings and related components; update styles for improved readability and consistency; enhance SettingsBtn with proper labels and functionality; modify background styles in App component; adjust migration logic for settings.

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
 h1 {
   text-align: center;
   margin: 10px 0;
+  color: white;
 }
 
 .Header {
@@ -59,6 +60,8 @@ h1 {
 .AccountStats {
   height: 300px;
   border: 1px solid black;
+  color: white;
+  background-color: #00000080;
 }
 
 .SettingsBtn {
@@ -113,12 +116,12 @@ td img {
 
 /* Appliquer un fond sombre à chaque ligne impaire */
 tbody tr:nth-child(odd) {
-  background-color: white;
+  background-color: var(--bg-color-odd);
 }
 
 /* Appliquer un fond clair à chaque ligne paire */
 tbody tr:nth-child(even) {
-  background-color: gray;
+  background-color: var(--bg-color-even);
 }
 
 th.racerCurrentStars {
